--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          feed_list: "https://yhotie.com/rss.xml,https://dev.to/feed/gautamkrishnar,https://www.gautamkrishnar.com/feed/"
+          feed_list: "http://yhotie.blogspot.com/feeds/posts/default?alt=rss,https://dev.to/feed/gautamkrishnar,https://www.gautamkrishnar.com/feed/"
